--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 #links{
   position: absolute;
   top: 10px;
-  left: 10px;
+  right: 10px;
   font-size: 1.5em;
   text-decoration: none;
   display: grid;
