--- a/style.css
+++ b/style.css
@@ -199,8 +199,7 @@ label + div {
     color: var(--blue);
     font-size: 1.3em;
 }
-.SituationCheckboxes {
-
+#SituationCheckboxes {
   display: block;
   padding: 5px 0
 }
@@ -244,6 +243,15 @@ textarea#comment {
   border: 1px solid var(--bluegreen);
   border-radius: 5px
 }
+
+
+#submitButton:disabled,
+#submitButton[disabled]{
+  opacity: .4;
+}
+
+
+
 table.allData {
   width: 100vh;
   overflow-x: scroll
