--- a/templates/style.css
+++ b/templates/style.css
@@ -41,10 +41,18 @@ body {
     line-height: 1.5
 }
 
-#links {
+#logout {
     position: absolute;
     top: 10px;
     right: 10px;
+    font-size: 1.5em;
+    text-decoration: none;
+    display: grid;
+}
+#links {
+    position: absolute;
+    top: 10px;
+    left: 10px;
     font-size: 1.5em;
     text-decoration: none;
     display: grid;
@@ -293,16 +301,17 @@ table.allData td {
 /* CHART */
 
 .container {
-  position: relative;
+    position: relative;
     display: block;
-margin: auto;
-    /* max-height: 95vw !important;
-    max-width: 95vh !important; */
+    margin: auto;
+    max-height: 95vw !important;
+    max-width: 95vh !important;
 }
-#brainChart{
-      max-height: 95% !important;
+
+#brainChart {
+    max-height: 95% !important;
     max-width: 95% !important;
-  /* position: absolute;
+    /* position: absolute;
   top: 50%;
   -ms-transform: translateY(+50%);
   transform: translateY(+50%); */
