JSON Restukturiert && new situations split by colon

--- a/form/style.css
+++ b/form/style.css
@@ -17,7 +17,7 @@
     --green: #98c379;
     --red: #be5046;
     --orange: #d19a66;
-    --yellow: #e6c07b
+    --yellow: #e6c07b;
 }
 
 :crayolaMetallic {
